[package]
name = "market_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1", features=["full"]}
axum = {version="0.7", features=["macros"]}
serde = {version="1", features=["derive"]}
ordered-float = "1.0"
uuid = {version="1.7", features=["v4", "fast-rng"]}
