[package]
name = "market_simulation_reattempt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "4.2"
uuid = {version="1.7", features=["v4", "fast-rng"]}
rand = {version="0.8"}
rand_distr = {version="0.4"}
crossbeam = {version="0.8"}
bus = {version="2.4"}
rayon = {version="1.10"}
